--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "type-check": "tsc --noEmit",
+    "lint": "tslint --project ."
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.2.0",
@@ -18,6 +20,8 @@
     "gatsby-plugin-react-helmet": "3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "2.0.32",
+    "gatsby-plugin-tslint": "^0.0.2",
+    "gatsby-plugin-typescript": "^2.0.15",
     "gatsby-remark-images": "3.0.10",
     "gatsby-remark-relative-images": "0.2.2",
     "gatsby-source-contentful": "^2.0.63",
@@ -29,8 +33,16 @@
     "react-helmet": "5.2.0"
   },
   "devDependencies": {
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "^16.8.4",
     "env-cmd": "^9.0.1",
-    "prettier": "^1.17.1"
+    "prettier": "^1.17.1",
+    "tslint": "^5.17.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-loader": "^3.5.4",
+    "tslint-plugin-prettier": "^2.0.1",
+    "tslint-react": "^4.0.0",
+    "typescript": "^3.5.1"
   },
   "repository": {
     "type": "git",
