--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "env-cmd -f .env gatsby develop",
+    "develop": "env-cmd -f .env.development gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -14,22 +14,22 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.2.0",
-    "gatsby": "^2.7.1",
+    "gatsby": "^2.8.5",
     "gatsby-plugin-react-helmet": "3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
-    "gatsby-plugin-sharp": "2.0.32",
-    "gatsby-remark-images": "3.0.10",
+    "gatsby-plugin-sharp": "2.1.3",
+    "gatsby-remark-images": "3.0.14",
     "gatsby-remark-relative-images": "0.2.2",
-    "gatsby-source-contentful": "^2.0.63",
-    "gatsby-source-filesystem": "2.0.28",
-    "gatsby-transformer-remark": "2.3.8",
+    "gatsby-source-contentful": "^2.0.67",
+    "gatsby-source-filesystem": "2.0.38",
+    "gatsby-transformer-remark": "2.3.12",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "5.2.0"
+    "react-helmet": "5.2.1"
   },
   "devDependencies": {
-    "env-cmd": "^9.0.1",
+    "env-cmd": "^9.0.3",
     "prettier": "^1.17.1"
   },
   "repository": {
