--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "env-cmd -f .env gatsby develop",
+    "build": "env-cmd -f .env.production gatsby build",
+    "develop": "env-cmd -f .env.development gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
